@@ -3,16 +3,20 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>79 74 486 240 0 0 1024 746 </string>
+	<string>169 48 486 240 0 0 1024 746 </string>
 	<key>IBFramework Version</key>
-	<string>364.0</string>
+	<string>446.1</string>
 	<key>IBLockedObjects</key>
 	<array/>
+	<key>IBLockedTabItems</key>
+	<array>
+		<integer>240</integer>
+	</array>
 	<key>IBOpenObjects</key>
 	<array>
 		<integer>21</integer>
 	</array>
 	<key>IBSystem Version</key>
-	<string>7S215</string>
+	<string>8P2137</string>
 </dict>
 </plist>
